fix(tf): make connection resource links specific
