# mgc/cli/openapis/network.openapi.yaml
@@ -320,7 +320,7 @@ paths:
                         application/json:
                             schema: {}
                     links:
-                        get:
+                        get-connection:
                             description: Check if a Security Group is attached to
                                 this Port
                             operationId: portDetails
@@ -331,7 +331,7 @@ paths:
                                 interval: 5s
                                 jsonPathQuery: $.result.security_groups[?(@.id ==
                                     $.owner.parameters.security_group_id)]
-                        delete:
+                        delete-connection:
                             description: Detach this Security Group from this Port
                             operationId: detachSecurityGroup
                             parameters:
@@ -579,7 +579,7 @@ paths:
                         application/json:
                             schema: {}
                     links:
-                        get:
+                        get-connection:
                             description: Check if this Public IP is attached to this
                                 Port
                             operationId: publicIpDetails
@@ -591,7 +591,7 @@ paths:
                                 interval: 5s
                                 jsonPathQuery: hasKey($.result, "port_id") && $.result.port_id
                                     == $.owner.parameters.port_id
-                        delete:
+                        delete-connection:
                             description: Detach this Public IP from this Port
                             operationId: detachPublicIp
                             parameters:
